fix splash again; add scrollbar directive stub;

--- a/www/styles/layout.less
+++ b/www/styles/layout.less
@@ -1,3 +1,8 @@
+app,
+navbar,
+home {
+  display: block;
+}
 .app {
   &_loading {
     display: none;
